structmeta-tests/tests/compile_fail/struct_meta/option_flag.stderr
error[E0308]: mismatched types
 --> $DIR/option_flag.rs:3:10
  |
3 | #[derive(structmeta::StructMeta)]
  |          ^^^^^^^^^^^^^^^^^^^^^^ expected struct `structmeta::Flag`, found struct `Span`
  |
  = note: expected enum `Option<structmeta::Flag>`
             found enum `Option<Span>`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
